--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "gh-pages": "^6.3.0",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0"
   },
